# ImageLib

./: CMakeLists.txt  LICENSE  README.md  build.bat
demo/: main.cpp
include/: include.h
src/color_correction/: color_correction.c
